--- a/capture-module-dashboard/package.json
+++ b/capture-module-dashboard/package.json
@@ -16,26 +16,29 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
+    "apexcharts": "^5.3.6",
+    "axios": "^1.13.2",
     "core-js": "^3.6.5",
     "quasar": "^2.16.0",
     "vue": "^3.5.22",
-    "vue-router": "^4.0.0"
+    "vue-router": "^4.0.0",
+    "vue3-apexcharts": "^1.10.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
+    "@quasar/app-webpack": "^4.1.0",
+    "@types/node": "^20.5.9",
+    "@vue/eslint-config-prettier": "^10.1.0",
+    "@vue/eslint-config-typescript": "^14.4.0",
+    "autoprefixer": "^10.4.2",
     "eslint": "^9.14.0",
     "eslint-plugin-vue": "^10.4.0",
     "eslint-webpack-plugin": "^4.2.0",
-    "@vue/eslint-config-typescript": "^14.4.0",
     "globals": "^16.4.0",
-    "vue-eslint-parser": "^10.2.0",
-    "@vue/eslint-config-prettier": "^10.1.0",
     "prettier": "^3.3.3",
-    "@types/node": "^20.5.9",
-    "@quasar/app-webpack": "^4.1.0",
-    "autoprefixer": "^10.4.2",
     "ts-loader": "^9.4.2",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "vue-eslint-parser": "^10.2.0"
   },
   "browserslist": [
     "last 10 Chrome versions",
